Created footer and slightly changed navigation bar

--- a/main.html
+++ b/main.html
@@ -10,10 +10,7 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.ico">
 
-    <!-- Stylesheets -->
-    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
-
-    <title>TheBrain fully featured mobile-friendly spaced-repetition flashcard app</title>
+    <title>TheBrain</title>
 
 </head>
 
